--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     image: moneylogger_app
     restart: unless-stopped
     environment:
+      FLASK_APP: app.py
       SECRET_KEY:
       POSTGRES_PASSWORD:
       EMAIL_PASSWORD:
@@ -25,21 +26,21 @@ services:
       - web
       - internal
 
-  moneylogger_celery:
-    container_name: moneylogger_celery
-    image: moneylogger_app
-    restart: unless-stopped
-    command: celery -A tasks.celery worker -l INFO -c 1 --max-memory-per-child 1000000 --max-tasks-per-child 50
-    environment:
-      SECRET_KEY:
-      POSTGRES_PASSWORD:
-      EMAIL_PASSWORD:
-      SECURITY_PASSWORD_SALT:
-    depends_on:
-      - moneylogger_postgres_db
-      - moneylogger_redis
-    networks:
-      - internal
+#  moneylogger_celery:
+#    container_name: moneylogger_celery
+#    image: moneylogger_app
+#    restart: unless-stopped
+#    command: celery -A tasks.celery worker -l INFO -c 1 --max-memory-per-child 1000000 --max-tasks-per-child 50
+#    environment:
+#      SECRET_KEY:
+#      POSTGRES_PASSWORD:
+#      EMAIL_PASSWORD:
+#      SECURITY_PASSWORD_SALT:
+#    depends_on:
+#      - moneylogger_postgres_db
+#      - moneylogger_redis
+#    networks:
+#      - internal
 
   moneylogger_postgres_db:
     container_name: moneylogger_postgres_db
@@ -80,12 +81,12 @@ services:
 #    networks:
 #      - internal
 
-  moneylogger_redis:
-    container_name: moneylogger_redis
-    image: redis:5.0.3-alpine
-    restart: unless-stopped
-    networks:
-      - internal
+#  moneylogger_redis:
+#    container_name: moneylogger_redis
+#    image: redis:5.0.3-alpine
+#    restart: unless-stopped
+#    networks:
+#      - internal
 
 volumes:
   volume_moneylogger_postgres_db:
