--- a/dockerfile-front
+++ b/dockerfile-front
@@ -1,20 +1,18 @@
-FROM node:16
-
-# создание директории приложения
-WORKDIR /usr/src/app
-
-# установка зависимостей
-# символ астериск ("*") используется для того чтобы по возможности
-# скопировать оба файла: package.json и package-lock.json
-COPY front/package*.json ./
-
-RUN npm install
-# Если вы создаете сборку для продакшн
-# RUN npm ci --only=production
-
-# копируем исходный код
-COPY front/ .
+# build environment
+FROM node:16 as build
+WORKDIR /app
+ENV PATH /app/node_modules/.bin:$PATH
+COPY front/package.json ./
+COPY front/package-lock.json ./
+RUN npm ci --silent
+RUN npm install react-scripts@3.4.1 -g --silent
+COPY front/ ./
 RUN npm run build
 
-EXPOSE 3000
-CMD [ "npm", "start" ]
+# production environment
+FROM nginx:stable
+COPY --from=build /app/build /usr/share/nginx/html
+# new
+COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
