--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,6 @@ services:
       SECURITY_PASSWORD_SALT:
     volumes:
       - volume_moneylogger_downloads:/srv/downloads
-    ports:
-      - 81:80
     depends_on:
       - moneylogger_postgres_db
     networks:
@@ -30,8 +28,13 @@ services:
     container_name: moneylogger_front
     image: moneylogger_front
     restart: unless-stopped
-    ports:
-      - 80:80
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.moneylogger.entrypoints=https"
+      - "traefik.docker.network=web"
+      - "traefik.port=80"
+      - "traefik.http.routers.moneylogger.tls=true"
+      - "traefik.http.routers.moneylogger.tls.certresolver=letsEncrypt"
     networks:
       - web
       - internal
