--- a/front/public/manifest.json
+++ b/front/public/manifest.json
@@ -18,7 +18,7 @@
         "type": "image/png"
     }
   ],
-  "start_url": "./transactions",
+  "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
