--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       POSTGRES_PASSWORD:
       EMAIL_PASSWORD:
       SECURITY_PASSWORD_SALT:
+      MONEYLOGGER_SENTRY_DSN:
     volumes:
       - volume_moneylogger_downloads:/srv/downloads
     depends_on:
