--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,13 @@ Flask-Mail==0.9.1
 redis==3.5.3
 celery==5.2.2
 Flask-Cors==3.0.10
-sentry-sdk==1.29.2
+blinker==1.6.2
+certifi==2023.7.22
+click==8.1.7
+colorama==0.4.6
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+sentry-sdk==1.31.0
+urllib3==2.0.4
+Werkzeug==2.3.7
